Bug 848062 - Make arrow functions inherit the value of 'this' from the enclosing scope. r=bhackett.