js/src/jit-test/tests/arrow-functions/this-2.js
@@ -1,0 +1,14 @@
+// 'this' is lexically scoped in direct eval code in arrow functions
+
+var obj = {
+    f: function (s) {
+        dis();
+        return a => eval(s);
+    }
+};
+
+var g = obj.f("this");
+assertEq(g(), obj);
+
+var obj2 = {g: g, fail: true};
+assertEq(obj2.g(), obj);
